# photon_old

./: .gitignore  README.md  pyproject.toml  setup.cfg
photon/: gamma.py  kernels.py  losses.py  metrics.py  models.py  optimizers.py  runs.py
src/: _version.py
src/photon/: __init__.py  gamma.py  layers.py  losses.py  metrics.py  models.py  optimizers.py  options.py  runs.py  utils.py
