[metadata]
name = photon-ml
version = 0.1.0
author = Stephen Sequenzia
author_email = sequenzia@gmail.com
description = ML Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sequenzia/photon
project_urls =
    Bug Tracker = https://github.com/sequenzia/photon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

install_requires =
    tensorflow>=2.7
    pandas>=1.2
    numpy>=1.2
    tables
    pyarrow
    sklearn

[options.packages.find]
where = src